--- a/index.html
+++ b/index.html
@@ -10,8 +10,32 @@
   <title>Portal de Notícias</title>
 </head>
 <body>
-  <a href="#">Link</a>
-  <h1>teste</h1>
-  <h2>subteste</h2>
+  <header class="container">
+    <nav id="primary" class="grid grid-flow-col">
+      <div>
+        <img src="assets/icons/List.svg" alt="Icone de menu">
+        <strong>Menu</strong>
+      </div>
+
+      <div>
+        <img src="assets/Logo.svg" alt="Logo">
+      </div>
+
+      <div>
+        <strong>Buscar</strong>
+        <img src="assets/icons/MagnifyingGlass.svg" alt="Ícone de lupa para pesquisa">
+      </div>
+    </nav>
+
+    <nav id="secondary" class="grid grid-flow-col">
+      <a href="#">Inteligência Artificial</a>
+      <a href="#">Blockchian</a>
+      <a href="#">Hologramas</a>
+      <a href="#">Internet</a>
+      <a href="#">Vestíveis</a>
+      <a href="#">Realidade Aumentada</a>
+      <a href="#">Realidade Virtual</a>
+    </nav>
+  </header>
 </body>
 </html>
