--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       </div>
     </section>
 
-    <section id="ia">
+    <section id="ai">
       <header class="grid grid-flow-col">
         <h3>Destaques da Inteligência Artificial</h3>
         <a href="#" class="grid grid-flow-col">
@@ -172,6 +172,7 @@
             </h3>
             <p class="text-sm">Em um mundo cada vez mais conectado, a comunicação sem fronteiras é essencial. Nesse contexto, um dispositivo portátil surge como um verdadeiro herói linguístico, prometendo quebrar as barreiras idiomáticas instantaneamente. Imagine poder se comunicar fluentemente em qualquer lugar do mundo, indepe...</p>
           </div>
+
           <div>
             <img src="assets/images/Image 11.png" alt="Aplicativo utiliza inteligência artificial para ajudar usuários a manterem o foco e aumentarem a produtividade no dia a dia.">
           </div>
@@ -212,7 +213,7 @@
       </div>
     </section>
 
-    <div>
+    <aside>
       <div id="ads">
         <img src="assets/images/Ads.png" alt="">
       </div>
@@ -238,7 +239,7 @@
               </span>
   
               <h3 class="text-xl">
-                Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e prom...
+                Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológic...
               </h3>
             </div>
           </article>
@@ -270,7 +271,7 @@
               </span>
   
               <h3 class="text-xl">
-                Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o i...
+                Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar...
               </h3>
             </div>
           </article>
@@ -286,7 +287,7 @@
               </span>
   
               <h3 class="text-xl">
-                Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o ce...
+                Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando...
               </h3>
             </div>
           </article>
@@ -310,7 +311,7 @@
 
         </div>
       </section>
-    </div>
+    </aside>
 
   </main>
 
